--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "cooter",
   "version": "0.0.1",
   "description": "cooter package",
-  "scripts": {
-    "test": "yarn test"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/WillCooter/cooter"
@@ -14,6 +11,9 @@
   ],
   "author": "William Cooter <will@cooters.co.uk> (https://github.com/WillCooter)",
   "license": "MIT",
+  "scripts": {
+    "dev": "node src/index.ts"
+  },
   "dependencies": {
     "typescript": "^4.3.5"
   }
