--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   "scripts": {
     "build": "tsc",
     "dev": "node src/test.ts",
-    "test": "yarn jest"
+    "test": "yarn jest",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "dependencies": {
     "cooter": "^0.0.3",
+    "prettier": "^2.3.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
