--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "author": "William Cooter <will@cooters.co.uk> (https://github.com/WillCooter)",
   "license": "MIT",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types.d.ts",
   "files": [
     "/dist"
   ],
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "tsc",
     "dev": "node src/test.ts",
     "test": "yarn jest",
@@ -26,7 +27,6 @@
     "lint": "tslint -p tsconfig.json"
   },
   "dependencies": {
-    "cooter": "^0.0.3",
     "prettier": "^2.3.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
