--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "declaration": true,
     "outDir": "./dist",
+    "declaration": true,
+    "removeComments": false,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "src/test.ts", "src/**/*.spec.ts"]
+  // "include": ["src"],
+  "exclude": ["node_modules/", "src/test.ts", "src/**/*.spec.ts"]
 }
