--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  // "include": ["src"],
-  "exclude": ["node_modules/", "src/test.ts", "src/**/*.spec.ts"]
+  "exclude": ["node_modules/", "src/test.ts", "src/**/*.spec.ts", "dist/"]
 }
